--- a/devel/python/tests/ert/enkf/CMakeLists.txt
+++ b/devel/python/tests/ert/enkf/CMakeLists.txt
@@ -34,6 +34,7 @@ set(TEST_SOURCES
     test_ensemble_config.py
     test_deprecation.py
     test_field_export.py
+    test_python_call.py
 )
 
 add_python_package("python.tests.ert.enkf" ${PYTHON_INSTALL_PREFIX}/tests/ert/enkf "${TEST_SOURCES}" False)
@@ -42,6 +43,7 @@ addPythonTest(ert.enkf.enkf tests.ert.enkf.test_enkf.EnKFTest LABELS StatoilData
 addPythonTest(ert.enkf.enkf_obs tests.ert.enkf.test_enkf_obs.EnKFObsTest LABELS StatoilData)
 addPythonTest(ert.enkf.deprecation tests.ert.enkf.test_deprecation.DeprecationTest)
 addPythonTest(ert.enkf.meas_block tests.ert.enkf.test_meas_block.MeasBlockTest)
+addPythonTest(ert.enkf.python_call tests.ert.enkf.test_python_call.PythonCallTest)
 addPythonTest(ert.enkf.meas_data tests.ert.enkf.test_meas_data.MeasDataTest)
 addPythonTest(ert.enkf.obs_data tests.ert.enkf.test_obs_data.ObsDataTest)
 addPythonTest(ert.enkf.gen_obs tests.ert.enkf.test_gen_obs.GenObsTest)
