--- a/devel/libenkf/src/CMakeLists.txt
+++ b/devel/libenkf/src/CMakeLists.txt
@@ -87,7 +87,8 @@ set( source_files
      custom_kw.c
      custom_kw_config.c
      custom_kw_config_set.c
-     )
+     forward_load_context.c
+)
 
 set( header_files
      time_map.h
@@ -185,7 +186,8 @@ set( header_files
      custom_kw.h
      custom_kw_config.h
      custom_kw_config_set.h
-     )
+     forward_load_context.h
+)
 
 
 add_library( enkf  ${LIBRARY_TYPE} ${source_files} )
